--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
   "author": "Fundrequest",
   "license": "MIT",
   "devDependencies": {
-    "ethereumjs-testrpc": "^4.0.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "mocha": "^2.2.5",
-    "solidity-coverage": "^0.2.1",
-    "truffle": "^4.0.4",
-    "solium": "^0.5.4",
+    "ganache-cli": "^6.0.3",
+    "mocha": "^5.0.0",
+    "solidity-coverage": "^0.4.8",
+    "truffle": "^4.0.5",
+    "solium": "^1.1.3",
     "truffle-hdwallet-provider": "0.0.3",
-    "chai": "^3.5.0",
-    "truffle-contract": "^3.0.1",
-    "web3": "^0.20.0"
+    "chai": "^4.1.2"
   },
   "dependencies": {}
 }
