--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "truffle": "^4.1.3",
     "solium": "^1.1.3",
     "truffle-hdwallet-provider": "0.0.3",
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "dotenv": "^5.0.0",
+    "ethereumjs-util": "^5.1.2",
+    "ethereumjs-wallet": "^0.6.0",
+    "ethjs": "^0.2.7",
+    "ethjs-signer": "^0.1.1",
+    "web3": "^0.19.0"
   }
 }
